[gd_scene load_steps=11 format=2]

[ext_resource path="res://Scripts/spawner.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Blob.tscn" type="PackedScene" id=2]
[ext_resource path="res://Sprites/blob3.png" type="Texture" id=3]
[ext_resource path="res://Sprites/blob.png" type="Texture" id=4]
[ext_resource path="res://Sprites/blob2.png" type="Texture" id=5]
[ext_resource path="res://Sprites/square.png" type="Texture" id=6]
[ext_resource path="res://Scripts/buttons.gd" type="Script" id=7]
[ext_resource path="res://Resources/sans.tres" type="DynamicFont" id=8]
[ext_resource path="res://Scripts/game.gd" type="Script" id=9]
[ext_resource path="res://Resources/smol_sans.tres" type="DynamicFont" id=10]

[node name="Game" type="Node2D"]
script = ExtResource( 9 )

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="Board" type="Sprite" parent="."]
modulate = Color( 0.2, 0.2, 0.2, 1 )
position = Vector2( 64, 64 )
scale = Vector2( 448, 448 )
texture = ExtResource( 6 )
centered = false
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}
blob = ExtResource( 2 )
blobs = [ ExtResource( 4 ), ExtResource( 5 ), ExtResource( 3 ) ]

[node name="Buttons" type="Control" parent="."]
margin_left = 640.0
margin_top = 224.0
margin_right = 896.0
margin_bottom = 352.0
script = ExtResource( 7 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="TextureButton0" type="TextureButton" parent="Buttons"]
modulate = Color( 1, 0.25, 0.25, 1 )
margin_right = 64.0
margin_bottom = 64.0
texture_normal = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cover" type="ColorRect" parent="Buttons/TextureButton0"]
margin_bottom = 64.0
color = Color( 0, 0, 0, 0.784314 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton1" type="TextureButton" parent="Buttons"]
modulate = Color( 1, 0.75, 0.25, 1 )
margin_left = 64.0
margin_right = 128.0
margin_bottom = 64.0
texture_normal = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cover" type="ColorRect" parent="Buttons/TextureButton1"]
margin_bottom = 64.0
color = Color( 0, 0, 0, 0.784314 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton2" type="TextureButton" parent="Buttons"]
modulate = Color( 0.75, 1, 0.25, 1 )
margin_left = 128.0
margin_right = 192.0
margin_bottom = 64.0
texture_normal = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cover" type="ColorRect" parent="Buttons/TextureButton2"]
margin_bottom = 64.0
color = Color( 0, 0, 0, 0.784314 )

[node name="TextureButton3" type="TextureButton" parent="Buttons"]
modulate = Color( 0.25, 1, 0.25, 1 )
margin_left = 192.0
margin_right = 256.0
margin_bottom = 64.0
texture_normal = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cover" type="ColorRect" parent="Buttons/TextureButton3"]
margin_bottom = 64.0
color = Color( 0, 0, 0, 0.784314 )

[node name="TextureButton4" type="TextureButton" parent="Buttons"]
modulate = Color( 0.25, 1, 0.75, 1 )
margin_top = 64.0
margin_right = 64.0
margin_bottom = 128.0
texture_normal = ExtResource( 6 )
expand = true

[node name="Cover" type="ColorRect" parent="Buttons/TextureButton4"]
margin_bottom = 64.0
color = Color( 0, 0, 0, 0.784314 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton5" type="TextureButton" parent="Buttons"]
modulate = Color( 0.25, 0.75, 1, 1 )
margin_left = 64.0
margin_top = 64.0
margin_right = 128.0
margin_bottom = 128.0
texture_normal = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cover" type="ColorRect" parent="Buttons/TextureButton5"]
margin_bottom = 64.0
color = Color( 0, 0, 0, 0.784314 )

[node name="TextureButton6" type="TextureButton" parent="Buttons"]
modulate = Color( 0.25, 0.25, 1, 1 )
margin_left = 128.0
margin_top = 64.0
margin_right = 192.0
margin_bottom = 128.0
texture_normal = ExtResource( 6 )
expand = true

[node name="Cover" type="ColorRect" parent="Buttons/TextureButton6"]
margin_bottom = 64.0
color = Color( 0, 0, 0, 0.784314 )

[node name="TextureButton7" type="TextureButton" parent="Buttons"]
modulate = Color( 1, 0.25, 0.75, 1 )
margin_left = 192.0
margin_top = 64.0
margin_right = 256.0
margin_bottom = 128.0
texture_normal = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cover" type="ColorRect" parent="Buttons/TextureButton7"]
margin_bottom = 64.0
color = Color( 0, 0, 0, 0.784314 )

[node name="Points" type="Label" parent="."]
margin_left = 512.0
margin_top = 128.0
margin_right = 1024.0
margin_bottom = 192.0
custom_fonts/font = ExtResource( 8 )
text = "Points: 0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameOver" type="Control" parent="."]
visible = false
margin_left = 640.0
margin_top = 384.0
margin_right = 896.0
margin_bottom = 512.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="GameOver"]
margin_right = 256.0
margin_bottom = 64.0
custom_fonts/font = ExtResource( 8 )
text = "Game Over"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Restart" type="Button" parent="GameOver"]
margin_left = 8.0
margin_top = 80.0
margin_right = 120.0
margin_bottom = 112.0
custom_fonts/font = ExtResource( 10 )
text = "Restart"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Exit" type="Button" parent="GameOver"]
margin_left = 136.0
margin_top = 80.0
margin_right = 244.0
margin_bottom = 112.0
custom_fonts/font = ExtResource( 10 )
text = "Exit"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="timeout" from="SpawnTimer" to="Board" method="_spawn"]
[connection signal="pressed" from="Buttons/TextureButton0" to="Buttons" method="_pressed" binds= [ Color( 1, 0, 0, 1 ), 0 ]]
[connection signal="pressed" from="Buttons/TextureButton1" to="Buttons" method="_pressed" binds= [ Color( 1, 0.666667, 0, 1 ), 1 ]]
[connection signal="pressed" from="Buttons/TextureButton2" to="Buttons" method="_pressed" binds= [ Color( 0.666667, 1, 0, 1 ), 2 ]]
[connection signal="pressed" from="Buttons/TextureButton3" to="Buttons" method="_pressed" binds= [ Color( 0, 1, 0, 1 ), 3 ]]
[connection signal="pressed" from="Buttons/TextureButton4" to="Buttons" method="_pressed" binds= [ Color( 0, 1, 0.666667, 1 ), 4 ]]
[connection signal="pressed" from="Buttons/TextureButton5" to="Buttons" method="_pressed" binds= [ Color( 0, 0.666667, 1, 1 ), 5 ]]
[connection signal="pressed" from="Buttons/TextureButton6" to="Buttons" method="_pressed" binds= [ Color( 0, 0, 1, 1 ), 6 ]]
[connection signal="pressed" from="Buttons/TextureButton7" to="Buttons" method="_pressed" binds= [ Color( 1, 0, 0.666667, 1 ), 7 ]]
[connection signal="pressed" from="GameOver/Restart" to="." method="_on_Restart_pressed"]
[connection signal="pressed" from="GameOver/Exit" to="." method="_on_Exit_pressed"]
